[package]
name = "cron-lite"
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
categories = ["date-and-time", "parser-implementations"]
description = "Lightweight cron expressions parser and time series generator"
edition = "2021"
rust-version = "1.67.1"
homepage = "https://github.com/alex-karpenko/cron-lite"
keywords = ["time", "cron", "schedule", "repeat", "periodic"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alex-karpenko/cron-lite"
version = "0.1.0"
exclude = [".github/**", ".vscode/**", "TODO.md", "Cargo.lock", "target/**", ".gitignore", "mutants.*/**"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
chrono = { version = "0.4.20", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "std"], optional = true }

[dev-dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["now"] }
rstest = { version = "0.23.0", default-features = false }
rstest_reuse = { version = "0.7.0", default-features = false }
