[package]
name = "cron-lite"
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
categories = ["date-and-time", "parser-implementations"]
description = "Lightweight cron expressions parser and time series generator"
edition = "2021"
rust-version = "1.81"
homepage = "https://github.com/alex-karpenko/cron-lite"
keywords = ["time", "cron", "schedule", "repeat", "periodic"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alex-karpenko/cron-lite"
version = "0.2.2"
exclude = [".github/**", ".vscode/**", "TODO.md", "Cargo.lock", "target/**", ".gitignore", "mutants.*/**"]

[features]
default = []
async = ["dep:futures", "dep:pin-project", "chrono/now"]
serde = ["dep:serde"]
tz = ["dep:chrono-tz"]

[dependencies]
chrono = { version = "0.4.20", default-features = false }
chrono-tz = { version = "0.10.0", default-features = false, optional = true }
futures = { version = "0.3.31", default-features = false, features = ["async-await"], optional = true }
pin-project = { version = "1.1.10", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "std"], optional = true }

[dev-dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["now", "clock"] }
criterion = "0.5.1"
rstest = { version = "0.25.0", default-features = false }
rstest_reuse = { version = "0.7.0", default-features = false }
tokio = { version = "1.45.0", default-features = false, features = ["time", "macros", "rt-multi-thread"] }

[[bench]]
name = "schedule"
harness = false
